[package]
name = "recursive_flip"
version = "3.1.1"
authors = ["Brushfam <green@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
flipper = { path = "../..", default-features = false }
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts/", tag = "3.1.1", default-features = false, features = ["psp22"] }

[lib]
name = "recursive_flip"
path = "lib.rs"

crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "flipper/std",
    "openbrush/std",
]

ink-as-dependency = []

[profile.dev]
codegen-units = 16